syntax = "proto3";

package com.academy.fintech.pg;

option java_multiple_files = true;

service AgreementPaymentService{
  rpc Pay(AgreementPaymentRequest) returns (AgreementPaymentResponse) {}
}

message AgreementPaymentRequest{
  string agreementId = 1;
  string amount = 2;
}

message AgreementPaymentResponse{
  bool isCompleted = 1;
}